--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,16 @@
 # or operating system, you probably want to add a global ignore instead:
 #   git config --global core.excludesfile '~/.gitignore_global'
 
+# Ignore gemfile
+Gemfile.lock
+
+# Ignore .dev-tests/
+.dev-tests/
+
+# Ignore environment variables
+.env
+.env.*
+
 # Ignore bundler config.
 /.bundle
 
