--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@
 # or operating system, you probably want to add a global ignore instead:
 #   git config --global core.excludesfile '~/.gitignore_global'
 
+# Ignore public/uploads (shrine uploaded files)
+/public/uploads/
+
 # Ignore .dev-tests/
 .dev-tests/
 
