Add docs/ to gitignore, remove historical files

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@
 # Ignore public/uploads (shrine uploaded files)
 /public/uploads/
 
+# Ignore docs images
+/docs/
+
 # Ignore .dev-tests/
 .dev-tests/
 
